fix(overflown-content): fix overflown content from markdown component

--- a/src/assets/stylesheets/_planner-layout.less
+++ b/src/assets/stylesheets/_planner-layout.less
@@ -93,3 +93,11 @@
     &:extend(.not-assigned-user-icon);
   }
 }
+//overrides for patternfly-ng components
+.editor-container {
+  .editor-preview {
+    p {
+      word-wrap: break-word;
+    }
+  }
+}
